比赛服务器部署版，修正Bug